--- a/css/index.css
+++ b/css/index.css
@@ -238,7 +238,8 @@ main {
 }
 .fsl {
   width: 100%;
-  height: 330px;
+  height: auto;
+  padding: 28px 10px;
 }
 .bg-img {
   width: 400px;
@@ -262,6 +263,7 @@ main {
   height: 100%;
   width: 50%;
   margin-left: 20px;
+  flex-direction: column;
   text-align: center;
 }
 .info span {
@@ -283,6 +285,11 @@ main {
   outline: none;
   border-radius: 7px;
   border: 1px solid aqua;
+  transition: 0.3s;
+}
+.info div:last-child button:hover {
+  color: red;
+  border: 1px solid red;
 }
 
 /* media */
