--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,33 @@ body {
 ul {
   list-style: none;
 }
+footer {
+  height: 0px;
+  z-index: 11111;
+  background: #1a1c3a;
+  overflow: hidden;
+  transition: 0.3s;
+  position: fixed;
+  bottom: 0;
+}
+
+.ytp-title-channel-logo {
+  display: none !important;
+}
+#btn-f {
+  position: fixed;
+  bottom: 0;
+  transition: 0.3s;
+  left: 60%;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: rgb(26, 28, 58);
+  border: 0px;
+  color: aliceblue;
+  transform: rotate(0deg);
+  font-size: 30px;
+}
 .cardd {
   background-repeat: no-repeat;
   display: inline-block;
@@ -39,18 +66,27 @@ ul {
   transform: rotateY(180deg);
   background-color: aliceblue;
   color: #1a1c3a;
+  border-radius: 7px;
 }
 .box:hover {
   transform: rotateY(-180deg);
 }
-#Putchese {
+#Card {
   perspective: 600px;
+  padding-bottom: 70px;
 }
 #other,
 #menu {
   height: 0px;
   transition: 0.3s;
   overflow: hidden;
+}
+.Scenes div:last-child div {
+  width: 350px;
+  height: 250px;
+  margin: 5px;
+  overflow: hidden;
+  border-radius: 7px;
 }
 #row1,
 #row2 {
@@ -299,9 +335,8 @@ main {
   background-size: cover;
   background-position: center center;
 }
-#Favorite {
+#Scenes {
   width: 100%;
-  background: brown;
 }
 ::-webkit-scrollbar {
   display: none;
@@ -414,5 +449,8 @@ main {
   #other,
   #menu {
     height: 238px !important;
+  }
+  #btn-f {
+    left: 45%;
   }
 }
