--- a/css/index.css
+++ b/css/index.css
@@ -9,8 +9,14 @@ body {
 ul {
   list-style: none;
 }
+
 #footer {
   transition: 0.3s;
+  height: 0;
+  box-shadow: 1px 1px 10px black;
+  overflow: hidden;
+  position: fixed;
+  bottom: 0;
   background-color: #1a1c3a;
 }
 
@@ -18,19 +24,20 @@ ul {
   display: none !important;
 }
 #btn-f {
-  position: absolute;
+  position: fixed;
   bottom: 0;
+  border: 1px solid aliceblue;
   transition: 0.3s;
   left: 50%;
   width: 50px;
   height: 50px;
   border-radius: 50%;
   background: rgb(26, 28, 58);
-  border: 0px;
   color: aliceblue;
   transform: rotate(0deg);
   font-size: 30px;
 }
+
 .cardd {
   background-repeat: no-repeat;
   display: inline-block;
@@ -445,8 +452,5 @@ main {
   #other,
   #menu {
     height: 238px !important;
-  }
-  #btn-f {
-    left: 45%;
   }
 }
