--- a/css/index.css
+++ b/css/index.css
@@ -23,6 +23,30 @@ ul {
 .creator:hover div ul {
   height: 27px;
 }
+#foot-con {
+  padding: 0;
+  margin: 0;
+}
+.social li,
+#foot-con li {
+  margin: 10px;
+  transition: 0.3s;
+}
+.social li:hover {
+  font-size: 18px;
+}
+.social li:first-child:hover {
+  color: #0d8cf1;
+}
+.social li:nth-child(2):hover {
+  color: red;
+}
+.social li:nth-child(3):hover {
+  color: #1d9bf0;
+}
+.social li:last-child:hover {
+  color: #dd326e;
+}
 .creator span {
   font-family: cursive;
   color: #f55555;
